Continent/ingress-tls/changed-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ing
  namespace: kube-system
spec:
  rules:
  - host: check-ing.com
    http:
      paths:
      - path: /
        backend:
          serviceName: caddy-svc
          servicePort: 80
