Continent/ingress-tls/testingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
  - host: ckstls.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caddy-svc
            port:
              number: 80
