Continent/ingress-tls/testingresswithtls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ing
spec:
  tls:
    - hosts:
        - ckstls.com
      secretName: sec-cks
  rules:
    - host: ckstls.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: caddy-svc
                port:
                  number: 80
